# iml4.1-Turma-D-Grupo-F

./: .pre-commit-config.yaml  README.md  pyproject.toml  run-code.sh  setup-docker.sh
.devcontainer/: Dockerfile  devcontainer.json
data/: arxiv_papers.csv
scraper/: crawler.py
