[tool.poetry]
name = "webscraper"
version = "0.1.0"
description = "A web scraper project"
authors = ["Lucas Costa", "Christian Lacerda", "Henrique Andrade", "Diego Araujo"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
crawl4ai = "^0.4.247"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
black = "^23.1a"
ruff = "^0.0.287"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
